Adicionar todo o projeto atualizado 2.0

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
+
+
+@font-face {
+  font-family: 'Gendy';
+  src: url('./fonts/Gendy.woff2') format('woff2'),
+       url('./fonts/Gendy.woff') format('woff'),
+       url('./fonts/Gendy.ttf') format('truetype'),
+       url('./fonts/Gendy.otf') format('opentype');
+  /* font-weight: 400; */
+  font-style: normal;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 /* Powerbizz.ai Design System - Exact Match to PNG Design */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 @layer base {
   :root {
@@ -69,12 +82,31 @@
 
   body {
     @apply bg-background text-foreground font-inter;
-    background: var(--gradient-background);
+    background: #000319;
     min-height: 100vh;
   }
 
   html {
     scroll-behavior: smooth;
+  }
+
+  h1, h2 {
+    font-family: 'Gendy', system-ui, -apple-system, sans-serif !important;
+    letter-spacing: 1.5px;
+    font-weight: normal !important;
+  }
+
+  .h1Hero {
+    max-width: 845px;
+  }
+
+
+  .font-ubuntu {
+    font-family: "Ubuntu Sans", sans-serif, -apple-system;
+  }
+
+  .gendy {
+    font-family: 'Gendy', system-ui, -apple-system, sans-serif;
   }
 
   .font-inter {
